--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+.exe
+HW/AC/409526040_test1.exe
+HW/409526040_hw1test2.exe
+HW/409526040_hw12.exe
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
